Closed Bug 310740 Opened 20 years ago Closed 20 years ago

ICO decoder never calls OnStartDecode

Categories

(Core :: Graphics: ImageLib, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: bryner, Assigned: bryner)

Details

Attachments

(1 file)

This expected notification never happens for ICO images.
Attached patch patchSplinter Review
Attachment #198177 - Flags: superreview?(tor)
Attachment #198177 - Flags: review?(cbiesinger)
Attachment #198177 - Flags: review?(cbiesinger) → review+
Attachment #198177 - Flags: superreview?(tor) → superreview+
checked in.
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: