Dispatch an OnStartDecode notification for ICO images.  Bug 310740, r=biesi, sr=tor.